[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/8-Bit Madness.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="scoreLabel" type="Label" parent="."]
margin_left = 367.551
margin_top = 11.4725
margin_right = 461.551
margin_bottom = 102.472
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -326.068
margin_top = -122.215
margin_right = 328.932
margin_bottom = -58.215
custom_fonts/font = SubResource( 1 )
text = "Dangerous Space"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enterButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 342.244
margin_top = 357.996
margin_right = -318.756
margin_bottom = -81.004
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="enterButton" to="." method="_on_enterButton_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_messageTimer_timeout"]
